[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "mrkt-stream"
path = "./src/mrkt-stream/bin/main.rs"

[[bin]]
name = "pallet-stream"
path = "./src/pallet-stream/bin/main.rs"

[[bin]]
name = "cw721-stream"
path = "./src/cw721-stream/bin/main.rs"