[package]
name = "cli"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tendermint-rpc = { version = "0.35.0", features = ["websocket-client", "http-client"] }
base64 = "0.22.0"
anyhow = "1.0.82"
chrono = "0.4.38"
dotenv = "0.15.0"
database = { path = "../database" }
service = { path = "../service" }



[[bin]]
name = "mrkt-stream"
path = "./src/mrkt-stream/main.rs"

[[bin]]
name = "pallet-stream"
path = "./src/pallet-stream/main.rs"

[[bin]]
name = "cw721-stream"
path = "./src/cw721-stream/main.rs"

