[package]
name = "cli"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "*"
tokio = { version = "*", features = ["full"] }
tendermint-rpc = { version = "*", features = ["http-client"] }
base64 = "*"
anyhow = "*"
chrono = "*"
dotenv = "*"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde_json = "*"
enumscribe= "*"
serde = { version = "*", features = ["derive"] }
database = { path = "../database" }
service = { path = "../service" }



[[bin]]
name = "mrkt-stream"
path = "./src/mrkt-stream/main.rs"

[[bin]]
name = "pallet-stream"
path = "./src/pallet-stream/main.rs"

[[bin]]
name = "cw721-stream"
path = "./src/cw721-stream/main.rs"

