[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
chrono = "0.4.38"

[dependencies.sea-orm]
version = "0.12.15"
features = [
     "sqlx-postgres", 
     "runtime-tokio-native-tls", 
     "macros", "with-chrono", 
     "sea-orm-internal", 
     "with-json", 
     "with-uuid" ,
     "debug-print"
]