[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
service = { path = "../service" }
serde_json = "*"
chrono = "*"

[dependencies.sea-orm]
version = "*"
features = [
     "sqlx-postgres", 
     "runtime-tokio-native-tls", 
     "macros", "with-chrono", 
     "sea-orm-internal", 
     "with-json", 
     "with-uuid" ,
     "debug-print"
]