[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.116"
chrono = "0.4.38"
deadpool-redis = "0.15.0"
dotenv = "0.15.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.58"
jsonwebtoken = "9.3.0"
service = { path = "../service" }
database = { path = "../database" }