[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "*", features = ["http2"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
serde_json = "*"
chrono = "*"
deadpool-redis = "*"
dotenv ="*"
axum-extra = { version = "*", features = ["typed-header"] }
validator = { version = "*", features = ["derive"] }
uuid = { version = "*", features = ["v4"] }
thiserror = "*"
jsonwebtoken = "*"
service = { path = "../service" }
database = { path = "../database" }