[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
cosmos-client = { version = "0.1.9" }
prost = "0.12.4"
tendermint-rpc = { version = "0.35.0", features = ["http-client"] }
thiserror = "1.0.58"
